<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SplashActivity">

    <LinearLayout
        android:id="@+id/tv_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_alert"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002">

        <ImageView
            android:id="@+id/img_close_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:padding="4dp"
            app:srcCompat="@drawable/baseline_close_24"
            app:tint="#D7D7D7" />

        <TextView
            android:id="@+id/tv_alert2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/danger_2"
            android:drawablePadding="4dp"
            android:drawableTint="#FFFFFF"
            android:fontFamily="@font/vazir_medium"
            android:gravity="right"
            android:padding="8dp"
            android:text="کاربر گرامی  اینترنت شما متصل نیست!"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/caption" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert"
        app:layout_constraintVertical_bias="0.18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/chat_msg1"
            android:textColor="#4E4E4E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo2" />

            <TextView

                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_chat_boy"
                android:backgroundTint="#656565"
                android:fontFamily="@font/vazir_medium"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/chat_msg1"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_chat_girl"
                android:backgroundTint="#D5D5D5"
                android:fontFamily="@font/vazir_medium"
                android:gravity="right"
                android:padding="10dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/chat_msg2"
                android:textColor="#000000"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/prof2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/chat_msg1"
            android:textColor="#4E4E4E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_chat_girl"
                android:backgroundTint="#656565"
                android:fontFamily="@font/vazir_medium"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/chat_msg3"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />"


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            app:layout_constraintVertical_bias="0.16000003">

            <TextView
                android:id="@+id/textView1s"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bg_chat_girl"
                android:backgroundTint="@color/purple_700"
                android:fontFamily="@font/vazir_medium"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="15dp"
                android:text="@string/chat_msg4"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/caption"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2s"
                app:layout_constraintTop_toTopOf="@+id/imageView2s" />

            <ImageView
                android:id="@+id/imageView2s"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="25dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/prof2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0"
            android:background="#CFCFCF"
            android:drawableRight="@drawable/icon_next"
            android:fontFamily="@font/vazir_thin"
            android:gravity="center"
            android:padding="8dp"
            android:text="ادامه داستان"
            android:textColor="#000000"
            android:textSize="@dimen/headline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

        <TextView
            android:id="@+id/tv_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/vazir_thin"
            android:text="1/4"
            android:textColor="#656565"
            android:textSize="@dimen/caption"
            app:layout_constraintBottom_toBottomOf="@+id/pb_story"
            app:layout_constraintEnd_toEndOf="@+id/tv_skip"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pb_story" />

        <ProgressBar
            android:id="@+id/pb_story"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:max="4"
            android:progressTint="@color/teal_200"
            app:layout_constraintEnd_toStartOf="@+id/tv_part"
            app:layout_constraintStart_toStartOf="@+id/tv_skip"
            app:layout_constraintTop_toBottomOf="@+id/tv_skip" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <Button
            android:id="@+id/btn_none_signup_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:backgroundTint="#C3C3C3"
            android:enabled="true"
            android:fontFamily="@font/vazir_medium"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/btn_none_login_text"
            android:textColor="#000000"
            android:textSize="@dimen/caption"
            android:visibility="gone"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/btn_phone1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"

            android:backgroundTint="@color/purple_700"
            android:elevation="4dp"
            android:enabled="true"
            android:fontFamily="@font/vazir_medium"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/btn_login_text"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/subtiltle"
            app:cornerRadius="6dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>